# amzn-return-risk

./: .gitconfig  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
configs/: config.yaml
data/raw/: .gitignore  amazon_ecommerce_1M.csv.dvc
docs/: data_signal_note.md
notebooks/: test.ipynb
scripts/: download_data.py  inject_signal.py
src/return_risk/data/: loader.py  schema.py  splits.py
src/return_risk/features/: build_features.py
src/return_risk/pipelines/: baseline.py  train.py
tests/unit/: test_data.py  test_features.py
