[project]
name = "return-risk"
version = "0.1.0"
description = "End-to-end MLOps pipeline for Amazon e-commerce return risk prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "category-encoders>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "kaggle>=1.6",
    "pandera>=0.20",
    "mlflow>=2.17",
    "dvc>=3.55",
    "prefect>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.9",
    "evidently>=0.4.33",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/return_risk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/return_risk --cov-report=term-missing"
